implemented mentor`s recommendations